# cmake_minimum_required(VERSION 3.20)
# project(TEST_PROTOBUF)

# aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} SRC)

# set(LIBRARY_OUTPUT_PATH ${LIBPATH})

# find_package(Protobuf REQUIRED)

# link_directories(${LIBPATH})

# add_executable(test_proto ${SRC})

# target_include_directories(test_proto PRIVATE ${Protobuf_INCLUDE_DIRS})
# target_link_libraries(test_proto PRIVATE ${Protobuf_LIBRARIES})
